# BigoudiEngine

./: .gitignore  CMakeLists.txt  HOWTO.md  Makefile  README.md  Readme.md  TODO.md  compile.sh  compileShaders.sh  main.cpp
src/: BigoudiEngine.cpp  BigoudiEngine.hpp  CMakeLists.txt  app.cpp  app.hpp  errorHandler.cpp  errorHandler.hpp  window.cpp  window.hpp
src/beCore/: CMakeLists.txt  application.hpp  beCore.hpp  be_application.hpp  be_core.hpp
src/beCore/debug/: CMakeLists.txt  be_debug.hpp  be_errorHandler.cpp  be_errorHandler.hpp  debug.hpp  errorHandler.cpp  errorHandler.hpp
src/beCore/entityComponentSystem/: CMakeLists.txt  be_entityComponentSystem.hpp  be_gameComponent.cpp  be_gameComponent.hpp  be_gameCoordinator.cpp  be_gameCoordinator.hpp  be_gameObject.cpp  be_gameObject.hpp  be_gameSystem.cpp  be_gameSystem.hpp  gameComponent.cpp  gameComponent.hpp  gameCoordinator.cpp  gameCoordinator.hpp  gameObject.cpp  gameObject.hpp  gameSystem.cpp  gameSystem.hpp
src/beCore/entityComponentSystem/components/: CMakeLists.txt  be_componentCollider.hpp  be_componentLight.hpp  be_componentMaterial.cpp  be_componentMaterial.hpp  be_componentModel.hpp  be_componentRenderSubSystem.hpp  be_componentRigidBody.hpp  be_componentTransform.hpp  be_components.cpp  be_components.hpp  componentModel.hpp  componentRenderSubSystem.hpp  componentTransform.hpp  components.cpp  components.hpp
src/beCore/entityComponentSystem/systems/: CMakeLists.txt  be_physicsSystem.cpp  be_physicsSystem.hpp  be_renderSystem.cpp  be_renderSystem.hpp  be_systems.hpp  ecsSimpleRenderSystem.cpp  ecsSimpleRenderSystem.hpp  ecstest.cpp  ecstest.hpp  physicsSystem.cpp  physicsSystem.hpp  renderSystem.cpp  renderSystem.hpp  systems.hpp
src/beCore/gameplay/: CMakeLists.txt  be_boundingVolume.cpp  be_boundingVolume.hpp  be_camera.cpp  be_camera.hpp  be_frameInfo.hpp  be_gameplay.hpp  be_lights.cpp  be_lights.hpp  be_material.cpp  be_material.hpp  be_model.cpp  be_model.hpp  be_scene.cpp  be_scene.hpp  be_texture.cpp  be_texture.hpp  be_transform.hpp  be_window.hpp  camera.cpp  camera.hpp  frameInfo.hpp  gameplay.hpp  model.cpp  model.hpp  pushConstants.hpp  window.hpp
src/beCore/time/: CMakeLists.txt  be_timer.cpp  be_timer.hpp  timer.cpp  timer.hpp
src/beCore/utils/: CMakeLists.txt  be_buffer.cpp  be_buffer.hpp  be_ubo.hpp  be_utilityFunctions.hpp  be_utils.hpp  buffer.cpp  buffer.hpp  errorHandler.cpp  errorHandler.hpp  utilityFunctions.hpp  utils.hpp
src/beDep/: CMakeLists.txt  beDep.hpp  be_dep.hpp
src/beDep/imgui/: CMakeLists.txt
src/beDep/imgui/backends/: CMakeLists.txt
src/beDep/imgui/vulkan/: CMakeLists.txt
src/beDep/stbImage/: CMakeLists.txt
src/beDep/tinyObjectLoader/: CMakeLists.txt  tinyObjectLoader.hpp
src/beDep/tinygltf/: CMakeLists.txt
src/beMaths/: CMakeLists.txt  beMaths.hpp  be_maths.hpp  mathsTypes.hpp
src/beMaths/matrix/: CMakeLists.txt  be_matrix.hpp  matrix.hpp  matrix1x2.cpp  matrix1x2.hpp  matrix1x3.hpp  matrix1x4.hpp  matrix2x1.cpp  matrix2x1.hpp  matrix2x2.hpp
src/beMaths/matrix/matrix1/: CMakeLists.txt  be_matrix1x2.cpp  be_matrix1x2.hpp  be_matrix1x3.cpp  be_matrix1x3.hpp  be_matrix1x4.cpp  be_matrix1x4.hpp  matrix1x2.cpp  matrix1x2.hpp  matrix1x3.cpp  matrix1x3.hpp  matrix1x4.cpp  matrix1x4.hpp
src/beMaths/matrix/matrix2/: CMakeLists.txt  be_matrix2x2.cpp  be_matrix2x2.hpp  be_matrix2x3.cpp  be_matrix2x3.hpp  be_matrix2x4.cpp  be_matrix2x4.hpp  matrix2x2.cpp  matrix2x2.hpp  matrix2x3.cpp  matrix2x3.hpp  matrix2x4.cpp  matrix2x4.hpp
src/beMaths/matrix/matrix3/: CMakeLists.txt  be_matrix3x2.cpp  be_matrix3x2.hpp  be_matrix3x3.cpp  be_matrix3x3.hpp  be_matrix3x4.cpp  be_matrix3x4.hpp  matrix3x2.cpp  matrix3x2.hpp  matrix3x3.cpp  matrix3x3.hpp  matrix3x4.cpp  matrix3x4.hpp
src/beMaths/matrix/matrix4/: CMakeLists.txt  be_matrix4x2.cpp  be_matrix4x2.hpp  be_matrix4x3.cpp  be_matrix4x3.hpp  be_matrix4x4.cpp  be_matrix4x4.hpp  matrix4x2.cpp  matrix4x2.hpp  matrix4x3.cpp  matrix4x3.hpp  matrix4x4.cpp  (+1 more)
src/beMaths/other/: CMakeLists.txt  be_color.cpp  be_color.hpp  be_hash.hpp  be_mathsFcts.cpp  be_mathsFcts.hpp  be_other.hpp  be_projections.cpp  be_projections.hpp  be_trigonometry.cpp  be_trigonometry.hpp  hash.hpp  other.hpp  projections.cpp  projections.hpp  trigonometry.cpp
src/beMaths/vector/: CMakeLists.txt  be_vector.hpp  be_vector2.cpp  be_vector2.hpp  be_vector3.cpp  be_vector3.hpp  be_vector4.cpp  be_vector4.hpp  vector.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
src/bePhysics/: CMakeLists.txt  bePhysics.hpp  be_physics.hpp  be_physicsConstants.hpp
src/bePhysics/bodies/: CMakeLists.txt  be_bodies.hpp  be_rigidBody.cpp  be_rigidBody.hpp
src/bePhysics/collider/: CMakeLists.txt  be_collider.cpp  be_collider.hpp  collider.hpp
src/beRenderer/: CMakeLists.txt  beRenderer.hpp  be_renderer.hpp
src/beRenderer/backEnd/: CMakeLists.txt
src/beRenderer/frontEnd/: CMakeLists.txt  frontEnd.cpp  frontEnd.hpp  frontEndTypes.hpp
src/beRenderer/pbr/: CMakeLists.txt  be_GGX.hpp  be_disney.hpp  be_pbr.hpp
src/beRenderer/renderSubSystems/: CMakeLists.txt  be_imgui.cpp  be_renderSubSystem.cpp  be_renderSubSystem.hpp  globalFrameRenderSubSystem.cpp  globalFrameRenderSubSystem.hpp  renderSubSystem.cpp  renderSubSystem.hpp  renderSubSystems.hpp  simpleRenderSubSystem.cpp  simpleRenderSubSystem.hpp
src/beRenderer/renderingSubSystems/: CMakeLists.txt  be_imgui.hpp  be_renderSubSystem.cpp  be_renderingSubSystems.hpp
src/beRenderer/shaders/: CMakeLists.txt  shaders.hpp
src/beRenderer/vulkan/: CMakeLists.txt  be_coreVulkan.hpp  be_descriptors.cpp  be_descriptors.hpp  be_pipeline.cpp  be_pipeline.hpp  be_renderer.cpp  be_renderer.hpp  be_swapChain.cpp  be_swapChain.hpp  be_vulkanApp.cpp  be_vulkanApp.hpp  be_vulkanInstance.cpp  be_vulkanInstance.hpp  descriptors.cpp  descriptors.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp  vulkanApp.cpp  vulkanApp.hpp  vulkanInstance.cpp  vulkanInstance.hpp
src/beRenderer/window/: CMakeLists.txt
src/shaders/: shader.frag  shader.vert
(+93 files in other folders)
